# foodinator

./: AppDefaults.py  README.md  add_existing_ingredient.ui  add_ingredient_popup.ui  add_tags.ui  all_definition.py  custom_table_items.py  editRecipePopup.py  edit_recipe.ui  foodClasses.py  food_list.py  foody.yml  ingredient.py  main.py  main_window.ui  myMainWindow.py  newIngredientPopup.py  new_cookbook_popup.ui  recipe.py  recipe_list_db.json  recipe_list_generator.py  setup.cfg  setup.py  super_testo_ingredients.txt  super_testo_recipes.txt  tag_definition.py  test.py  testjson.json
app_files/: app_setings.json
application_files/: foodinator_settings.json
cookbooks/: julia_and_swann_cookbook.cookbook  julia_and_swann_cookbook.cookbookjulia_and_swann_cookbook_08-01-2022_17-14-20_bak.cookbook  julia_and_swann_cookbook.cookbookjulia_and_swann_cookbook_08-01-2022_17-30-49_bak.cookbook  julia_and_swann_cookbook.cookbookjulia_and_swann_cookbook_17-07-2021_10-35-01_bak.cookbook  my_super_cookbook_06-06-2021_16-42-27_backup.json  my_super_cookbook_09-06-2021_08-12-38_backup.json  my_super_cookbook_13-05-2021_18-42-13_backup.json  my_super_cookbook_cookBook.cookbook  my_super_cookbook_cookBook.json
food_item_library/: all-foods.csv  foodLibrary.py
src/foodinator/: AppDefaults.py  MyMainWindow.py  __init__.py  custom_table_items.py  editRecipePopup.py  foodClasses.py  foodLibrary.py  foody.yml  main.py  myMainWindow.py
src/foodinator/application_files/: all-foods.csv
src/foodinator/ui/: edit_recipe.ui  main_window.ui  new_cookbook_popup.ui
tests/: test.py
