[metadata]
name = foodinator
version = 0.0.1
author = squanchy2000
author_email = squanchy2000@protonmail.ch
description = A package made to manage my recipes and help me decides what I eat.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slevasse/foodinator
project_urls =
    Bug Tracker = https://github.com/slevasse/foodinator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
# Add here console scripts like:
console_scripts =
      foody = foodinator.main:run